lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/array_match_key_prefix_nc_klen/array_match_key_prefix_nc_klen2/array_match_key_prefix_nc_klen2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/array_match_key_prefix_nc_klen/array_match_key_prefix_nc_klen2/array_match_key_prefix_nc_klen2.c:34:36: error: use of undeclared identifier 's__a'
    array_match_key_prefix_nc_klen(s__a ,str_s ,q_b__slen );
                                   ^
1 error generated.
